# fastapi-postgres-multi-agent-data-analytics

./: .dockerfile  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  entry_point.py  pyproject.toml  requirements.txt
agent_results/give_me_all_countries_that_hav__09_51_12/: agent_chats.json  run_sql_results.json
agent_results/give_me_all_the_country_that_h__14_21_59/: agent_chats.json
agent_results/give_me_all_the_country_that_h__15_26_53/: agent_chats.json
agent_results/give_me_all_the_country_that_h__15_27_36/: agent_chats.json  run_sql_results.json
agent_results/give_me_all_the_country_that_h__15_36_42/: agent_chats.json
agent_results/give_me_all_the_country_that_h__15_48_09/: agent_chats.json
agent_results/give_me_all_the_country_that_h__16_00_22/: agent_chats.json
agent_results/give_me_all_the_country_that_h__16_06_34/: agent_chats.json
agent_results/give_me_all_the_country_that_h__16_13_14/: agent_chats.json
agent_results/give_me_all_the_country_that_h__16_14_37/: agent_chats.json
agent_results/give_me_all_the_country_that_h__16_15_10/: agent_chats.json
agent_results/give_me_all_the_country_that_h__16_26_41/: agent_chats.json  run_sql_results.json
agent_results/je_suis_un_bucks__14_19_50/: agent_chats.json
main/: generate_response.py
src/: agents.py  agents_config.py  agents_instrument.py  db.py  orchestrator.py  utils.py
